# PhotoChemicalModel_TU

./: .gitignore  CMakeLists.txt  HIT-ATM-SFIT-No.txt  PhotoChem_GUI.py  PhotoChemistry  PhotoChemistry_mpi.sh  README.md  a.out  c__prm.f90  e__conductivity.f90  e__conductivity_1D.f90  e__main  e__main.f90  instruction.md  p__EUVAC.f90  p__UV.f90  p__airglow.f90  p__conductivity.f90  p__eddy_diffusion.f90  p__io.f90  p__molecular_diffusion.f90  p__photochem_opticaldepth.f90  p__photochem_rate.f90  p__photochem_scheme.f90  p__photochem_transport.f90  p__search.f90  p__sub.f90  rpn_parser.py  tkHyperlinkManager.py  v__Jupiter.f90  v__Mars.f90  v__tdec.f90
Jupiter/: Fe_I-M_map.py  Sp_sigma.plt  a.out.ld_2dvX1F  a.out.ld_78xbGB  a.out.ld_vlTm1h  asa032.f90  dw.plt  j_sigma.plt  k_aurora.f90  plasma_dynamics.f90  plasma_velocity.f90  plasma_velocity_iter.f90  potential_solver.f90  sigma.plt  sigma_plot.py
Jupiter/in_metal/: v__in.f90
Jupiter/metal/: plot.plt  v__in.f90
Jupiter/metal_Hill/: v__in.f90
Jupiter/metal_dev10/: v__in.f90
Jupiter/metal_dev10_Hill/: v__in.f90
Jupiter/metal_x10/: v__in.f90
Jupiter/metal_x10_Hill/: v__in.f90
Jupiter/no_metal/: v__in.f90
Jupiter/no_metal_Hill/: v__in.f90
Mars/: plot.plt
Mars/Chaffin+17/: v__in.f90
Mars/Mar2015/: v__in.f90
Mars/OHtest/: plot.plt  v__in.f90
Mars/Shinagawa/: v__in.f90
Mars/ionization_rate/: plot.plt  v__in.f90
Mars/ionosphere/: v__in.f90
UV/: photochemistry_auto_Tmod_run2.jl  photochemistry_copy.jl
mtglog/: log_07_31.txt  log_08_03.txt  log_08_07.txt  log_7_17.txt  todo.txt
(+18 files in other folders)
